--- a/app-config.yaml
+++ b/app-config.yaml
@@ -64,7 +64,11 @@ techdocs:
 
 auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
-  providers: {}
+  providers: 
+    github:
+      development:
+        clientId: ${BACKSTAGE_AUTH_GITHUB_CLIENT_ID}
+        clientSecret: ${BACKSTAGE_AUTH_GITHUB_CLIENT_SECRET}
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
