--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -1,3 +1,10 @@
+apiVersion: backstage.io/v1alpha1
+kind: Group
+metadata:
+  name: CORE
+spec:
+  type: team
+  children: []
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-user
 apiVersion: backstage.io/v1alpha1
