--- a/org/teams/core-team-group.yml
+++ b/org/teams/core-team-group.yml
@@ -9,6 +9,7 @@ spec:
     # Intentional no displayName for testing
     email: team-core@example.com
     picture: https://avatars.dicebear.com/api/identicon/team-a@example.com.svg?background=%23fff&margin=25
+    parent: backstage
   children: [kubernaughts]
 ---
 apiVersion: backstage.io/v1alpha1
